# smartphone-robot-firmware

./: .bashrc  .gdbinit  .gitignore  .gitmodules  .local.vimrc  2AndroidPhonesSuccessfulPWR_SWP.tdc  CMakeLists.txt  Dockerfile  J4_OnConnectFromPDPowerSource_AlreadyPoweredOnExtJ1_FailedPDO0ARequested.tdc  J4_OnConnectFromPDPowerSource_AlreadyPoweredOnExtJ1_SuccessWithCustomPDOValue_PhoneFailedPowerSwap2.tdc  J4_OnConnectFromPDPowerSource_AlreadyPoweredOnExtJ1_SuccessWithCustomPDOValue_PhoneSuccessPowerSwapSucceedFailOnReverse200mACap.tdc  Makefile  README.md  STWLC38JRM.c  STWLC38JRM.h  b.sh  bit_ops.c  bit_ops.h  bq27742-g1.c  bq27742-g1.h  bq27742_g1.c  bq27742_g1.h  breakpoints  custom_printf.c  custom_printf.h  debug.sh  docker-compose.yml  drv8830.c  drv8830.h  flash.sh  max77857.c  max77958.c  max77958.h  max77976.c  max77976.h  ncp3901.c  ncp3901.h  pico-access.sh  quad_encoders.c  quad_encoders.h  (+11 more)
.github/workflows/: automated-releases.yml  pr-build-check.yml
debug/: breakpoints2
docker/: Dockerfile  docker-compose.yml
extras/: failed_cc_detection.tdc
extras/pd_tests/: J4_OnConnectFromPDPowerSource_AlreadyPoweredOnExtJ1.tdc  J4_OnConnectFromPDPowerSource_AlreadyPoweredOnExtJ1_SuccessWithCustomPDOValue.tdc  J4_OnConnectFromPDPowerSource_AlreadyPoweredOnExtJ1_SuccessWithCustomPDOValue_PhoneFailedPowerSwap.tdc  J4_OnConnectFromPDPowerSource_AlreadyPoweredOnExtJ1_SuccessWithCustomPDOValue_PhoneFailedPowerSwapSource_Cap3.56A.tdc  J4_OnConnectFromPDPowerSource_AlreadyPoweredOnExtJ1_SuccessWithCustomPDOValue_PhoneSuccessPowerSwapThenFail.tdc  J4_OnConnectFromPDPowerSource_AlreadyPoweredOnExtJ1_SuccessWithRecommendedPDOValue.tdc
include/: CMakeLists.txt  STWLC38JRM.h  android_to_rp2040_command.h  bq27742_g1.h  custom_printf.h  drv8830.h  max77857.h  max77958.h  max77976.h  ncp3901.h  robot.h  sn74ahc125rgyr.h
pd_tests/: J1_OnConnectFromPDPowerSource.tdc  J4_OnConnectFromPDPowerSource_AlreadyPoweredOnExtJ1_SuccessPWRSWP_Bothways_andDataRoleSwap_bothways.tdc  J4_OnConnectFromPDPowerSource_AlreadyPoweredOnExtJ1_SuccessWithCustomPDOValue_PhoneSuccessPowerSwap1WayOnly.tdc
src/: STWLC38JRM.c  bq27742_g1.c  drv8830.c  interupts.c  max77857.c  max77958.c  max77976.c  ncp3901.c  quad_encoders.c  robot.c  rp2040_log.c  serial_comm_manager.c  sn74ahc125rgyr.c  wrm483265_10f5_12v_g.c
